# cubone/apispec.yml
@@ -51,6 +51,21 @@ paths:
           description: "Malformed IP address specified"
         404:
           description: "No record was found for the specified IP address"
+  /map/{address}/{prefixLength}:
+    get:
+      summary: "Get the allocation state with the highest occurence in the specified IPv4 network. Prefix length must be one of 8, 16, 24, 32. The mapping algorithm uses AllocationState::Unknown for missing records instead of returning a 404 error"
+      parameters:
+        - $ref: "#/components/parameters/addressParam"
+        - name: prefixLength
+          in: path
+          required: true
+          schema:
+            type: number
+      responses:
+        200:
+          description: "Allocation state id"
+        400:
+          description: "Wrong IPv4 address / prefix length specified"
   /_unit:
     get:
       summary: "Unit information"
